--- a/task4/public/styles/vars.scss
+++ b/task4/public/styles/vars.scss
@@ -6,6 +6,7 @@ $green-dark: #24a3a3;
 $green_color: #cdf3ea;
 $blue-valid: #0075ff;
 $blue-color: #7fc1db;
+$green-dark-opacity: #24a3a3d1;
 $blue-dark-color: #5b94a1;
 $blue-modal: #2e7d9c;
 $green-modal: #d8f2e3e3;
