--- a/task4/public/styles/styles.scss
+++ b/task4/public/styles/styles.scss
@@ -139,6 +139,7 @@ input[type="checkbox"] {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     @media (width < vars.$width-smartpthone) {
       grid-template-columns: 1fr 1fr 1fr 1fr;
+      padding: 110px 10px 40px;
     }
   }
   &__card-box6x5 {
@@ -251,7 +252,8 @@ input[type="checkbox"] {
   }
   @media (width < vars.$width-smartpthone) {
     top: 59px;
-    height: calc(100% - 59px);
+    position: fixed;
+    height: calc(100vh - 59px);
   }
 
   &__title {
@@ -797,6 +799,15 @@ input[type="checkbox"] {
   }
 }
 
+.not-found {
+  padding: 120px 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  font-size: 24px;
+}
 .flip-vertical-right {
   animation: flip-vertical-right 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955)
     both;
