--- a/task5/src/styles/globals.scss
+++ b/task5/src/styles/globals.scss
@@ -1,18 +1,18 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+   --background: #ffffff;
+   --foreground: #171717;
 
-  // UI COLORS:
+   // UI COLORS:
 
-  --nav-menu-back: #1B1A1D; // Neutral 900
-  
+   --nav-menu-back: #1b1a1d;  // Neutral 900
+   --nav-menu-btns: #2d2d2d;  // Neutral 700
+   --nav-menu-hints: #787878; // Neutral 600
 
-  
-  --nav-menu-width: 272px;
+   --nav-menu-width: 272px;
 }
 
 @media (prefers-color-scheme: dark) {
-  /* :root {
+   /* :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   } */
@@ -20,104 +20,105 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+   max-width: 100vw;
+   overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+   color: var(--foreground);
+   background: var(--background);
+   font-family: Arial, Helvetica, sans-serif;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+   box-sizing: border-box;
+   padding: 0;
+   margin: 0;
+   position: relative;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+   color: inherit;
+   text-decoration: none;
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+   html {
+      color-scheme: dark;
+   }
 }
 
 /* ------------------- Reset css ----------------- */
 * {
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
+   padding: 0px;
+   margin: 0px;
+   border: 0px;
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
+   box-sizing: border-box;
 }
 
 html,
 body {
-  height: 100%;
+   height: 100%;
 }
 
 body {
-  text-rendering: optimizeLegibility;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+   text-rendering: optimizeLegibility;
+   -ms-text-size-adjust: 100%;
+   -moz-text-size-adjust: 100%;
+   -webkit-text-size-adjust: 100%;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
 }
 
 :focus,
 :active {
-  outline: none;
+   outline: none;
 }
 
 a:focus,
 a:active {
-  outline: none;
+   outline: none;
 }
 
 input,
 button,
 textarea {
-  font-family: var(--base-font);
-  font-size: inherit;
+   font-family: var(--base-font);
+   font-size: inherit;
 }
 
 button {
-  cursor: pointer;
-  color: inherit;
-  background-color: inherit;
+   cursor: pointer;
+   color: inherit;
+   background-color: inherit;
 }
 
 a {
-  color: inherit;
+   color: inherit;
 }
 
 a:link,
 a:visited {
-  text-decoration: none;
+   text-decoration: none;
 }
 
 a:hover {
-  text-decoration: none;
+   text-decoration: none;
 }
 
 ul li {
-  list-style: none;
+   list-style: none;
 }
 
 img {
-  vertical-align: top;
+   vertical-align: top;
 }
 
 h1,
@@ -126,11 +127,11 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: inherit;
-  font-size: inherit;
+   font-weight: inherit;
+   font-size: inherit;
 }
 
 /* Fix slaider */
 * {
-  min-width: 0;
+   min-width: 0;
 }
