--- a/task5/src/ui/SelectCustom/SelectCustom.module.scss
+++ b/task5/src/ui/SelectCustom/SelectCustom.module.scss
@@ -1,3 +1,10 @@
+$primary-color: #007bff;
+$border-color: #ccc;
+$background-color: #fff;
+$hover-color: #f1f1f1;
+$text-color: #333;
+$error-color: red;
+
 .error {
   font-size: 11px;
   line-height: 100%;
@@ -10,7 +17,33 @@
   flex-direction: column;
   align-items: start;
 
-  & select {
+  .select-wrp {
+    position: relative;
+    cursor: pointer;
+
+    .dropdown-arrow {
+      display: block;
+      position: absolute;
+      right: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 16px;
+      height: 16px;
+
+      transition: transform 0.3s ease;
+
+      &.open {
+        transform: rotate(180deg) translateY(45%);
+      }
+      svg {
+        display: block;
+        transform-origin: center;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+  .select {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -24,9 +57,5 @@
     width: 285px;
     height: 40px;
     background: #f4f6f8;
-    background-image: url('/images/icons/arrow-down-select.svg');
-    background-repeat: no-repeat;
-    background-position: 93% center;
-    background-size: 16px;
   }
 }
