--- a/task5/src/ui/SelectCustomCheckbox/SelectCustomCheckbox.module.scss
+++ b/task5/src/ui/SelectCustomCheckbox/SelectCustomCheckbox.module.scss
@@ -27,6 +27,10 @@ $height-select: 40px;
 
   .dropdown {
     position: relative;
+    top: 0;
+    left: 0;
+    height: $height-select;
+    overflow: hidden;
 
     border-radius: 8px;
     padding: 10px 20px;
@@ -41,10 +45,57 @@ $height-select: 40px;
 
     .dropdown-header {
       display: flex;
-      justify-content: space-between;
+      justify-content: start;
+      flex-wrap: nowrap;
       align-items: center;
+      // position: relative;
+      // top: 0;
+      // left: 0;
+      position: absolute;
+      width: fit-content;
+      left: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 1;
+      white-space: nowrap;
+      height: 15px;
 
       .dropdown-item-header {
+        display: inline-block;
+        font-weight: 400;
+        font-size: 10px;
+        line-height: 110%;
+        color: $text-color;
+        background-color: #fff;
+        border-radius: 4px;
+        position: relative;
+        width: fit-content;
+        left: 0;
+        top: 0;
+        z-index: 1;
+
+        padding: 2px 18px 2px 8px;
+        margin-right: 6px;
+
+        .close-wrp {
+          position: absolute;
+          display: block;
+          right: 5px;
+          top: 50%;
+          transform: translateY(-50%);
+          margin-left: 2px;
+          cursor: pointer;
+
+          width: 7px;
+          height: 7px;
+
+          svg {
+            display: block;
+            transform-origin: center;
+            width: 100%;
+            height: 100%;
+          }
+        }
       }
     }
 
@@ -81,7 +132,11 @@ $height-select: 40px;
     border: 1px solid $border-color;
     background-color: $background-color;
     border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow:
+      0 8px 16px -2px rgba(27, 36, 44, 0.12),
+      0 2px 2px -1px rgba(27, 35, 44, 0.04);
+    background: #fff;
+    color: $text-color;
     z-index: 10;
 
     &:focus {
@@ -90,10 +145,14 @@ $height-select: 40px;
     }
 
     .dropdown-item {
-      padding: 8px 12px;
       cursor: pointer;
       display: flex;
       align-items: center;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 120%;
+      color: #212121;
+      padding: 10px 12px;
 
       &:hover {
         background-color: $hover-color;
@@ -108,18 +167,18 @@ $height-select: 40px;
           display: none; // Скрываем стандартный чекбокс
 
           &:checked + .checkbox-custom {
-            background-color: $primary-color;
-            border-color: $primary-color;
+            background-color: #3787eb;
+            border-color: #3787eb;
 
             &::after {
               content: '';
               position: absolute;
-              width: 5px;
-              height: 10px;
+              width: 3.5px;
+              height: 6.5px;
               border: solid $background-color;
               border-width: 0 2px 2px 0;
               top: 3px;
-              left: 5px;
+              left: 6px;
               transform: rotate(45deg);
             }
           }
@@ -130,7 +189,8 @@ $height-select: 40px;
           display: inline-block;
           width: 16px;
           height: 16px;
-          border: 1px solid $border-color;
+
+          border: 1px solid #a6a6a6;
           border-radius: 4px;
           background-color: $background-color;
           margin-right: 8px;
