--- a/task5/src/styles/globals.scss
+++ b/task5/src/styles/globals.scss
@@ -7,8 +7,12 @@
    --nav-menu-back: #1b1a1d;  // Neutral 900
    --nav-menu-btns: #2d2d2d;  // Neutral 700
    --nav-menu-hints: #787878; // Neutral 600
+   --bread-crumbs-text: #A6A6A6; // Neutral 500
+   --bread-crumbs-back: #F4F6F8; // Neutral 200
 
-   --nav-menu-width: 272px;
+   --active-link: #3787EB;    // e.g. bread-crumbs
+
+   --nav-menu-width: 272px;   
 }
 
 @media (prefers-color-scheme: dark) {
