--- a/task5/src/modules/ProgectsPage/projects-page.module.css
+++ b/task5/src/modules/ProgectsPage/projects-page.module.css
@@ -42,6 +42,11 @@
          display: flex;
          flex-wrap: wrap;
          gap: 1rem;
+
+         /* grid-template-columns: repeat(3, minmax(15%, 400px)); */
+         /* grid-template-columns: repeat(3, 1fr); */
+         display: grid;
+         grid-template-columns: repeat(var(--columns-count), 1fr);
       }
 
       .favorite_projects {
