feat: border on hover

--- a/task5/src/styles/globals.scss
+++ b/task5/src/styles/globals.scss
@@ -10,6 +10,11 @@
    --bread-crumbs-text: #A6A6A6; // Neutral 500
    --bread-crumbs-back: #F4F6F8; // Neutral 200 --- input backs, project-cards back
 
+   // PRIMARY:
+
+   --main-blue: #3787EB;
+
+   
    --active-link: #3787EB;    // e.g. bread-crumbs
 
    --nav-menu-width: 272px;   
