--- a/task5/src/modules/ProgectsPage/components/project_card/project-card.module.css
+++ b/task5/src/modules/ProgectsPage/components/project_card/project-card.module.css
@@ -14,6 +14,9 @@
    flex-direction: column;
    gap: 1rem;
 
+   border: 1px solid transparent;
+   transition: .5s;   
+
    img {
       height: 32px;
       width: 32px;
@@ -30,28 +33,29 @@
       right: 1rem;
       top: 1rem;
       height: 20px;
-      width: 20px;      
+      width: 20px;
       opacity: 0;
-      transition: .5s;
+      transition: 0.5s;
       mask: url('/images/icons/favorite-icon__hovered.svg') no-repeat;
 
-      svg{
+      svg {
          left: 1px;
          top: 1px;
-         transition: .5s;
+         transition: 0.5s;
       }
 
-      &:hover{
-         background-color: #3787EB;
+      &:hover {
+         background-color: var(--main-blue);
 
-         svg{
+         svg {
             opacity: 0;
          }
       }
    }
 
-   &:hover{
-      .favorite_icon{
+   &:hover {
+      border: 1px solid var(--main-blue);
+      .favorite_icon {
          opacity: 1;
       }
    }
