--- a/task5/src/modules/ProgectsPage/components/project_card/project-card.module.css
+++ b/task5/src/modules/ProgectsPage/components/project_card/project-card.module.css
@@ -2,9 +2,9 @@
    background-color: var(--bread-crumbs-back);
    /* temp size: */
    height: 124px;
-   width: 208px;
+   /* width: 208px; */
    /* for grid: */
-   /* width: 100%; */
+   width: 100%;
 
    border-radius: 0.5rem;
    padding: 1rem;
