--- a/task5/src/components/bread_crumbs/bread-crumbs.module.css
+++ b/task5/src/components/bread_crumbs/bread-crumbs.module.css
@@ -7,13 +7,13 @@
 
    a {
       color: var(--bread-crumbs-text);
-
-      &:last-child {
-         color: var(--active-link);
-      }
    }
 
    span {
       margin: 0 1rem;
+
+      &:last-child a{
+         color: var(--active-link);
+      }
    }
 }
