--- a/task5/src/components/left_menu/aside-panel.module.css
+++ b/task5/src/components/left_menu/aside-panel.module.css
@@ -2,6 +2,7 @@
    background-color: var(--nav-menu-back);
    height: 100vh;
    width: var(--nav-menu-width);
+   min-width: var(--nav-menu-width);
    padding: 1rem;
 
    position: sticky;
@@ -92,6 +93,7 @@
 
    &.collapsed {
       width: 40px;
+      min-width: 40px;
 
       padding: 1rem 0;
 
