--- a/task5/src/modules/KanbanPage/kanban-page.module.css
+++ b/task5/src/modules/KanbanPage/kanban-page.module.css
@@ -7,7 +7,70 @@
       margin-left: 1rem;
    }
 
-   &>h6 {
+   & > h6 {
       margin-bottom: 0 !important;
+      flex-grow: 1;
+   }
+
+   button {
+      background-color: var(--main-blue);
+      color: white;
+      height: 40px;
+      padding: 0 2rem;
+      border-radius: 8px;
+
+      span {
+         border: 1px solid white;
+         width: 16px;
+         height: 16px;
+         display: inline-block;
+         border-radius: 4px;
+         line-height: 15px;
+         margin-right: 0.5rem;
+         text-align: center;
+      }
+   }
+}
+
+.filters {
+   display: flex;
+   flex-wrap: wrap;
+   gap: 0.9rem;
+   align-items: end;
+   justify-content: space-between;
+
+   &:last-child {
+      margin-top: 1rem;
+      width: 49.5%;
+
+      & > div {
+         flex-grow: 0.5;
+      }
+   }
+
+   & > div {
+      flex-grow: 0.25;
+      display: flex;
+      flex-direction: column;
+      gap: 0.6rem;
+   }
+
+   @media screen and (max-width: 1279px) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+
+      &:last-child {
+         width: 100%;
+      }
+   }
+
+   label {
+      display: block;
+      color: var(--bread-crumbs-text);
+      font-size: 14px;
+   }
+   input {
+      width: 264px;
+      width: 100%;
    }
 }
