--- a/task5/src/modules/KanbanPage/kanban-page.module.css
+++ b/task5/src/modules/KanbanPage/kanban-page.module.css
@@ -39,7 +39,7 @@
    align-items: end;
    justify-content: space-between;
 
-   &:last-child {
+   &+.filters {
       margin-top: 1rem;
       width: 49.5%;
 
@@ -59,7 +59,7 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
 
-      &:last-child {
+      &+.filters {
          width: 100%;
       }
    }
@@ -73,4 +73,9 @@
       width: 264px;
       width: 100%;
    }
+}
+
+.kanban{
+   display: flex;
+   justify-content: space-around;
 }
