feat: task card наброски

--- a/task5/src/styles/globals.scss
+++ b/task5/src/styles/globals.scss
@@ -13,8 +13,8 @@
    // PRIMARY:
 
    --main-blue: #3787EB;
+   --tasks-text-color: #798FA5;
 
-   
    --active-link: #3787EB;    // e.g. bread-crumbs
 
    --nav-menu-width: 272px;   
