--- a/task5/src/modules/KanbanPage/kanban-page.module.css
+++ b/task5/src/modules/KanbanPage/kanban-page.module.css
@@ -3,11 +3,11 @@
    align-items: center;
    gap: 1rem;
 
-   & > div {
+   &>div {
       margin-left: 1rem;
    }
 
-   & > h6 {
+   &>h6 {
       margin-bottom: 0 !important;
       flex-grow: 1;
    }
@@ -43,12 +43,12 @@
       margin-top: 1rem;
       width: 49.5%;
 
-      & > div {
+      &>div {
          flex-grow: 0.5;
       }
    }
 
-   & > div {
+   &>div {
       flex-grow: 0.25;
       display: flex;
       flex-direction: column;
@@ -69,13 +69,62 @@
       color: var(--bread-crumbs-text);
       font-size: 14px;
    }
+
    input {
       width: 264px;
       width: 100%;
    }
 }
 
-.kanban{
+.kanban_container {
+   width: 100%;
+   overflow: auto;
+
+   overflow: -moz-scrollbars-none;
+   scrollbar-width: none;
+
+   &::-webkit-scrollbar {
+      width: 0;
+   }
+}
+
+.kanban {
    display: flex;
    justify-content: space-around;
+   margin-top: 2rem;
+   gap: 1rem;
+   min-width: 1280px;
+
+   h4 {
+      margin-top: 0 !important;
+      color: var(--nav-menu-btns);
+      font-size: 14px !important;
+      margin: .75rem 0;
+      display: inline-block;
+
+      &::after {
+         content: attr(data-count);
+         position: absolute;
+         right: -2rem;
+         background-color: var(--bread-crumbs-back);
+         padding: .25rem .5rem;
+         color: var(--main-blue);
+         border-radius: 8px;
+         top: -.25rem;
+         font-size: 12px;
+         font-weight: 400;
+      }
+   }
+
+
+
+   &>div {
+      .tasks {
+         padding: .6rem;
+         background-color: #F4F6F8;
+         height: 50rem;
+         width: 256px;
+         border-radius: .75rem;         
+      }
+   }
 }
