--- a/task5/src/modules/KanbanPage/components/task-card/task-card.module.css
+++ b/task5/src/modules/KanbanPage/components/task-card/task-card.module.css
@@ -3,6 +3,7 @@
    min-height: 160px;
    border-radius: 6px;
    padding: 12px;
+   cursor: pointer;
 
    display: flex;
    flex-direction: column;
@@ -40,7 +41,7 @@
    display: flex;
    font-size: 12px;
    justify-content: space-between;
-   
+
    h5 {
       color: var(--tasks-text-color);
    }
