--- a/task5/src/modules/KanbanPage/kanban-page.module.css
+++ b/task5/src/modules/KanbanPage/kanban-page.module.css
@@ -95,7 +95,7 @@
    gap: 1rem;
    min-width: 1280px;
 
-   h4 {
+   &>div>h4 {
       margin-top: 0 !important;
       color: var(--nav-menu-btns);
       font-size: 14px !important;
@@ -120,7 +120,7 @@
 
    &>div {
       flex: 1 1 0px;
-      
+
       .tasks {
          padding: .6rem;
          background-color: #F4F6F8;
