--- a/task5/src/ui/SelectCustom/SelectCustom.module.scss
+++ b/task5/src/ui/SelectCustom/SelectCustom.module.scss
@@ -17,6 +17,10 @@ $height-select: 40px;
 }
 
 .select-custom {
+  max-width: $width-select;
+  width: 100%;
+  // height: $height-select;
+
   .label {
     color: #a6a6a6;
     margin-bottom: 6px;
@@ -52,6 +56,7 @@ $height-select: 40px;
 }
 
 .select {
+  position: relative;
   cursor: pointer;
   display: flex;
   justify-content: space-between;
@@ -63,8 +68,7 @@ $height-select: 40px;
   color: $text-color;
   border-radius: 8px;
   padding: 10px 20px;
-  width: $width-select;
-  // height: $height-select;
+
   background-color: $background-color;
 
   &.open {
