--- a/task5/src/ui/SelectCustomCheckbox/SelectCustomCheckbox.module.scss
+++ b/task5/src/ui/SelectCustomCheckbox/SelectCustomCheckbox.module.scss
@@ -11,7 +11,8 @@ $height-select: 40px;
 
 .select-custom {
   position: relative;
-  width: $width-select;
+  max-width: $width-select;
+  width: 100%;
 
   .label {
     font-size: 14px;
@@ -26,76 +27,88 @@ $height-select: 40px;
   }
 
   .dropdown {
+    display: inline-block;
     position: relative;
     top: 0;
     left: 0;
     height: $height-select;
+
     overflow: hidden;
 
     border-radius: 8px;
-    padding: 10px 20px;
     background: $background-color;
     cursor: pointer;
     user-select: none;
+    width: 100%;
+    padding: 10px 20px;
+    padding-right: 40px;
 
     &.open {
       outline: none;
       border: 1px solid #3787eb;
     }
 
-    .dropdown-header {
-      display: flex;
-      justify-content: start;
-      flex-wrap: nowrap;
-      align-items: center;
-      // position: relative;
-      // top: 0;
-      // left: 0;
-      position: absolute;
-      width: fit-content;
-      left: 20px;
+    &-header-wrp {
+      position: relative;
+      left: 0px;
       top: 50%;
       transform: translateY(-50%);
-      z-index: 1;
+      z-index: 2;
+      overflow: hidden;
+      max-height: 18px;
       white-space: nowrap;
-      height: 15px;
+      text-overflow: ellipsis;
+      display: flex;
+      align-items: center;
 
-      .dropdown-item-header {
-        display: inline-block;
-        font-weight: 400;
-        font-size: 10px;
-        line-height: 110%;
-        color: $text-color;
-        background-color: #fff;
-        border-radius: 4px;
-        position: relative;
-        width: fit-content;
-        left: 0;
-        top: 0;
-        z-index: 1;
+      .dropdown-header {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        flex-wrap: nowrap;
+        gap: 6px;
 
-        padding: 2px 18px 2px 8px;
-        margin-right: 6px;
+        .dropdown-item-header {
+          font-weight: 400;
+          font-size: 10px;
+          line-height: 110%;
+          color: $text-color;
+          background-color: #fff;
+          border-radius: 4px;
 
-        .close-wrp {
-          position: absolute;
-          display: block;
-          right: 5px;
-          top: 50%;
-          transform: translateY(-50%);
-          margin-left: 2px;
-          cursor: pointer;
+          flex: 0 0 auto;
+          position: relative;
+          display: flex;
+          align-items: center;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          padding: 2px 22px 2px 8px;
 
-          width: 7px;
-          height: 7px;
-
-          svg {
+          .close-wrp {
+            position: absolute;
             display: block;
-            transform-origin: center;
-            width: 100%;
-            height: 100%;
+            right: 5px;
+            top: 50%;
+            transform: translateY(-50%);
+            margin-left: 2px;
+            cursor: pointer;
+
+            width: 6px;
+            height: 6px;
+
+            svg {
+              display: block;
+              transform-origin: center;
+              width: 100%;
+              height: 100%;
+            }
           }
         }
+      }
+
+      &.open .dropdown-header-wrp {
+        overflow: visible;
       }
     }
 
@@ -140,7 +153,7 @@ $height-select: 40px;
     z-index: 10;
 
     &:focus {
-      outline: none; /* Убирает контур при фокусе */
+      outline: none;
       border: 1px solid #3787eb;
     }
 
