feat: z-index решил проблему

--- a/task5/src/modules/KanbanPage/kanban-page.module.css
+++ b/task5/src/modules/KanbanPage/kanban-page.module.css
@@ -127,6 +127,7 @@
          height: 50rem;
          min-width: 256px;
          border-radius: .75rem;
+         transition: .5s;
 
          display: flex;
          flex-direction: column;
