fixed: высота карточек

--- a/task5/src/modules/KanbanPage/components/task-card/task-card.module.css
+++ b/task5/src/modules/KanbanPage/components/task-card/task-card.module.css
@@ -14,10 +14,11 @@
       font-weight: bold;
       font-size: 14px;
    }
-
+   
    h4 {
       color: var(--tasks-text-color);
       font-size: 12px !important;
+      margin-top: 0 !important;
    }
 
    .tags {
