--- a/task5/src/modules/AuthPage/auth.module.scss
+++ b/task5/src/modules/AuthPage/auth.module.scss
@@ -22,9 +22,18 @@
   line-height: 120%;
   color: #a6a6a6;
   padding-bottom: 6px;
+  pointer-events: none;
+  transform-origin: 0 0;
+  transition:
+    opacity 0.15s ease-in-out,
+    transform 0.15s ease-in-out;
 }
 
 .input {
+  display: block;
+  width: 100%;
+  font-family: inherit;
+  background-clip: padding-box;
   padding: 11.5px 20px;
   border-radius: 8px;
   width: 302px;
@@ -34,15 +43,50 @@
   font-size: 14px;
   line-height: 120%;
   color: #222;
+  outline: none;
   box-sizing: border-box;
-  border: none;
-}
-.input:hover {
-  border: 1px solid #3787eb;
-}
-.input:focus {
-  padding-top: 23.5px;
-  padding-bottom: 7.5px;
+  border: 1px solid transparent;
+  transition: padding 0.2s;
+
+  &_valid {
+    background-color: aquamarine;
+  }
+  &_invalid {
+    background-color: brown;
+  }
+  &::placeholder {
+    color: #a6a6a6;
+    opacity: 0.4;
+  }
+  &:focus,
+  &:not(:placeholder-shown) {
+    padding-top: 23.5px;
+    padding-bottom: 7.5px;
+    border: 1px solid #abbed1;
+  }
+  &_box {
+    position: relative;
+    padding-top: 24px;
+  }
+  &:focus ~ .foremail,
+  &:not(:placeholder-shown) ~ .foremail {
+    left: 9px;
+    opacity: 0.65;
+    transform: scale(0.85) translateY(-0.75rem) translateX(0.15rem);
+  }
+
+  &:focus ~ .forpassword,
+  &:not(:placeholder-shown) ~ .forpassword {
+    left: 15px;
+    opacity: 0.65;
+    transform: scale(0.85) translateY(-0.75rem) translateX(0.15rem);
+  }
+  &:hover {
+    border: 1px solid #3787eb;
+  }
+  // &:active {
+  //   background-color: #fff;
+  // }
 }
 .submit {
   margin-top: 24px;
@@ -57,23 +101,19 @@
   color: #fff;
   background-color: #3787eb;
 }
-.relative {
-  position: relative;
-  padding-top: 24px;
-}
-.input:focus + .foremail,
-.input:focus + .forpassword {
-  font-weight: 400;
-  font-size: 10px;
-  top: 49px;
-  line-height: 120%;
-  color: #a6a6a6;
-}
+// .input:focus + .foremail,
+// .input:focus + .forpassword {
+//   font-weight: 400;
+//   font-size: 10px;
+//   top: 49px;
+//   line-height: 120%;
+//   color: #a6a6a6;
+// }
 .foremail,
 .forpassword {
   position: absolute;
-  top: 54px;
-  left: 20px;
+  bottom: 11.5px;
+  left: 21px;
   font-weight: 400;
   font-size: 14px;
   line-height: 120%;
