fix: изменил язык приложения с en на ru в _documents, исправил название папки Progects на Projects, добавил ссылку на проекты в MainPage

--- a/task5/src/modules/HomePage/Home.module.scss
+++ b/task5/src/modules/HomePage/Home.module.scss
@@ -1,49 +1,53 @@
 .header {
-  display: flex;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: #f4f6f8;
-  padding: 15px 31px 15px 14px;
-  border: 1px solid #d9d9d9;
-  height: 70px;
-  box-sizing: border-box;
+   display: flex;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   background: #f4f6f8;
+   padding: 15px 31px 15px 14px;
+   border: 1px solid #d9d9d9;
+   height: 70px;
+   box-sizing: border-box;
 }
-
+.main {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
 .link {
-  border-radius: 6px;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 171%;
-  text-align: center;
-  color: #fff;
-  padding: 8px 32px;
-  background: #3787eb;
+   border-radius: 6px;
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 171%;
+   text-align: center;
+   color: #fff;
+   padding: 8px 32px;
+   background: #3787eb;
 
-  &:hover {
-    background-color: #4b93ed;
-  }
-  &:focus {
-    outline: 2px solid #1b1a1d;
-  }
-  &:active {
-    background-color: #0053ad;
-    outline: none;
-  }
-  &:disabled {
-    background-color: #eef5fc;
-    outline: none;
-    color: #abbed1;
-  }
+   &:hover {
+      background-color: #4b93ed;
+   }
+   &:focus {
+      outline: 2px solid #1b1a1d;
+   }
+   &:active {
+      background-color: #0053ad;
+      outline: none;
+   }
+   &:disabled {
+      background-color: #eef5fc;
+      outline: none;
+      color: #abbed1;
+   }
 }
 
 .footer {
-  border: 1px solid #d9d9d9;
-  height: 50px;
-  background: #f4f6f8;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding-right: 94px;
-  gap: 20px;
+   border: 1px solid #d9d9d9;
+   height: 50px;
+   background: #f4f6f8;
+   display: flex;
+   justify-content: flex-end;
+   align-items: center;
+   padding-right: 94px;
+   gap: 20px;
 }
