--- a/task5/src/modules/TaskPage/components/FileUploader.tsx/uploader.module.scss
+++ b/task5/src/modules/TaskPage/components/FileUploader.tsx/uploader.module.scss
@@ -28,4 +28,9 @@ $upload-icon: url("data:image/svg+xml,%3Csvg width='11' height='12' viewBox='0 0
       top: 0;
       left: 0;
    }
+   &_input {
+      opacity: 0;
+      visibility: hidden;
+      position: absolute;
+   }
 }
