feat: исправлен select placeholder

--- a/task5/src/modules/TaskModalCreationEditing/task-modal-creation-editing.module.scss
+++ b/task5/src/modules/TaskModalCreationEditing/task-modal-creation-editing.module.scss
@@ -206,6 +206,14 @@
    }
 }
 
+// Даты
+.form-date-start {
+   svg path {
+      fill: #abbed1;
+   }
+}
+
+// Описание
 .form-description {
    p {
       position: static;
