--- a/task5/src/modules/TaskPage/components/FileUploader.tsx/uploader.module.scss
+++ b/task5/src/modules/TaskPage/components/FileUploader.tsx/uploader.module.scss
@@ -33,4 +33,8 @@ $upload-icon: url("data:image/svg+xml,%3Csvg width='11' height='12' viewBox='0 0
       visibility: hidden;
       position: absolute;
    }
+   &_dragstyle {
+      border: 1px dashed #3787eb;
+      background-color: #f4f6f8;
+   }
 }
