--- a/task5/src/components/select_custom/select-custom.module.scss
+++ b/task5/src/components/select_custom/select-custom.module.scss
@@ -10,107 +10,112 @@ $width-select: 285px;
 $height-select: 40px;
 
 .error {
-  font-size: 11px;
-  line-height: 100%;
-  color: $error-color;
-  margin-top: 6px;
+   font-size: 11px;
+   line-height: 100%;
+   color: $error-color;
+   margin-top: 6px;
 }
 
 .select-custom {
-  max-width: $width-select;
-  width: 100%;
-  // height: $height-select;
+   max-width: $width-select;
+   width: 100%;
+   // height: $height-select;
 
-  .label {
-    color: #a6a6a6;
-    margin-bottom: 6px;
-  }
+   .label {
+      color: #a6a6a6;
+      margin-bottom: 6px;
+   }
 
-  .select-wrp {
-    position: relative;
-    cursor: pointer;
-    margin-top: 6px;
+   .select-wrp {
+      position: relative;
+      cursor: pointer;
+      margin-top: 6px;
 
-    .dropdown-arrow {
-      display: block;
-      position: absolute;
-      right: 12px;
-      top: 50%;
-      transform: translateY(-50%);
-      width: $width-arrow;
-      height: $width-arrow;
+      .dropdown-arrow {
+         display: block;
+         position: absolute;
+         right: 12px;
+         top: 50%;
+         transform: translateY(-50%);
+         width: $width-arrow;
+         height: $width-arrow;
 
-      transition: transform 0.3s ease;
+         transition: transform 0.3s ease;
 
-      &.open {
-        transform: rotate(180deg) translateY(45%);
+         &.open {
+            transform: rotate(180deg) translateY(45%);
+         }
+         svg {
+            display: block;
+            transform-origin: center;
+            width: 100%;
+            height: 100%;
+         }
       }
-      svg {
-        display: block;
-        transform-origin: center;
-        width: 100%;
-        height: 100%;
+   }
+
+   .select-title {
+      font-size: 14px;
+      color: #a6a6a6;
+
+      &.selected {
+         color: $text-color;
       }
-    }
-  }
+   }
 }
 
 .select {
-  position: relative;
-  cursor: pointer;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+   position: relative;
+   cursor: pointer;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 143%;
-  color: $text-color;
-  border-radius: 8px;
-  padding: 10px 20px;
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 143%;
+   color: $text-color;
+   border-radius: 8px;
+   padding: 10px 20px;
 
-  background-color: $background-color;
+   background-color: $background-color;
 
-  &.open {
-    outline: none;
-    border: 1px solid #3787eb;
-  }
-}
-
-.select-title {
-  font-size: 14px;
-  color: #a6a6a6;
-
-  &.selected {
-    color: $text-color;
-  }
+   &.open {
+      outline: none;
+      border: 1px solid #3787eb;
+   }
 }
 
 .dropdown-list {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  max-height: 350px;
-  overflow-y: auto;
-  border: 1px solid #eee;
-  border-radius: 6px;
-  padding: 8px 0px;
-  box-shadow:
-    0 8px 16px -2px rgba(27, 36, 44, 0.12),
-    0 2px 2px -1px rgba(27, 35, 44, 0.04);
-  background: #fff;
-  z-index: 10;
-  margin-top: 8px;
+   position: absolute;
+   top: 100%;
+   left: 0;
+   width: 100%;
+   max-height: 350px;
+   overflow-y: auto;
+   border: 1px solid #eee;
+   border-radius: 6px;
+   padding: 8px 0px;
+   box-shadow:
+      0 8px 16px -2px rgba(27, 36, 44, 0.12),
+      0 2px 2px -1px rgba(27, 35, 44, 0.04);
+   background: #fff;
+   z-index: 10;
+   margin-top: 8px;
 }
 
 .dropdown-item {
-  padding: 9.5px 16px;
-  cursor: pointer;
-  background-color: #fff;
-  color: #333;
+   padding: 9.5px 16px;
+   cursor: pointer;
+   background-color: #fff;
+   color: #333;
 
-  &:hover {
-    background-color: $hover-color;
-  }
+   &:hover {
+      background-color: $hover-color;
+   }
+
+   span {
+      border-radius: 5px;
+      padding: 2px 6px;
+   }
 }
