feat: fix: добавил appApi, изменил типы, изменил иконки, изменил компоненты страницы taskpage, изменил стили

--- a/task5/src/modules/TaskPage/components/CommentForm/commform.module.scss
+++ b/task5/src/modules/TaskPage/components/CommentForm/commform.module.scss
@@ -1,11 +1,11 @@
 .comments {
 }
-// .preveiw_box {
-//    padding-bottom: 32px;
-//    display: flex;
-//    flex-wrap: wrap;
-//    gap: 8px;
-// }
+.preveiw_box {
+   padding-bottom: 32px;
+   display: flex;
+   flex-wrap: wrap;
+   gap: 8px;
+}
 .commtitle {
    width: fit-content;
    font-weight: 500;
