--- a/task5/src/components/SelectCustom/SelectCustom.module.scss
+++ b/task5/src/components/SelectCustom/SelectCustom.module.scss
@@ -61,7 +61,7 @@ $height-select: 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  border: 1px solid transparent;
   font-weight: 400;
   font-size: 14px;
   line-height: 143%;
