--- a/task5/src/modules/TaskPage/components/FileUploader.tsx/uploader.module.scss
+++ b/task5/src/modules/TaskPage/components/FileUploader.tsx/uploader.module.scss
@@ -8,6 +8,7 @@ $upload-icon: url("data:image/svg+xml,%3Csvg width='11' height='12' viewBox='0 0
    height: 64px;
    display: flex;
    justify-content: center;
+   cursor: pointer;
    &_text {
       font-family: inherit;
       font-weight: 400;
