--- a/task5/src/components/file_upload/file-upload.module.scss
+++ b/task5/src/components/file_upload/file-upload.module.scss
@@ -87,3 +87,12 @@
       border-radius: 8px;
    }
 }
+
+.preview-image {
+   max-width: 70px;
+   max-height: 70px;
+   object-fit: cover;
+   border: 1px solid #ddd;
+   border-radius: 4px;
+   margin-right: 10px;
+}
