feat: fix: изменил компонент добавлени комментария, добавил возможность редактирования комментария

--- a/task5/src/components/TextAreaWithToolbar/TextAreaWithToolbar.module.scss
+++ b/task5/src/components/TextAreaWithToolbar/TextAreaWithToolbar.module.scss
@@ -1,7 +1,6 @@
 .textarea-wrp {
    width: 100%;
    min-height: 148px;
-   margin: '0 auto';
 
    .textarea-header {
       display: flex;
@@ -9,6 +8,21 @@
       margin-bottom: 3px;
       background-color: #f4f6f8;
       padding: 8px 20px;
+      display: flex;
+
+      .btn-textarea-icon {
+         width: 16px;
+         height: 16px;
+
+         &:hover {
+            border: 1px solid #d9dde1;
+            border-radius: 2px;
+         }
+      }
+      .btn-textarea-active {
+         border: 1px solid #3787eb;
+         border-radius: 2px;
+      }
    }
 
    .textarea {
