fixed: ширина колонок при их большшом количестве

--- a/task5/src/modules/KanbanPage/kanban-page.module.css
+++ b/task5/src/modules/KanbanPage/kanban-page.module.css
@@ -118,8 +118,10 @@
 
 
 
-   &>div {
+   &>div, &>.col {
+
       flex: 1 1 0px;
+      min-width: 245px;
 
       .tasks {
          padding: .6rem;
